--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        // This is path of google-services
+        classpath("com.google.gms:google-services:4.4.4")
     }
 }
 
