--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "lucide-react-native": "^0.562.0",
+    "nativewind": "^4.2.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.6.1",
@@ -30,7 +31,7 @@
     "react-native-gesture-handler": "^2.30.0",
     "react-native-image-crop-picker": "^0.51.1",
     "react-native-reanimated": "^4.2.1",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
@@ -55,6 +56,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.2.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.8.3"
   },
   "engines": {
