--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/elements": "^2.9.3",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.2.0",
@@ -35,7 +36,8 @@
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.7.1"
+    "react-native-worklets": "^0.7.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
