--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-worklets": "^0.7.1",
     "react-redux": "^9.2.0"
   },
