--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-worklets": "^0.7.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
