--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.3",
+    "react-native-vision-camera-face-detector": "^1.10.1",
     "react-native-worklets": "^0.7.1",
+    "react-native-worklets-core": "^1.6.2",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
